[workspace]
members = ["crates/spades-core", "crates/spades-server"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["William <limwilliam23@gmail.com>"]
repository = "https://github.com/wlim33/rust-spades"
license = "MIT"
version = "2.0.0"

[workspace.dependencies]
uuid = { version = "1.18", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
