[workspace]
members = ["crates/spades-core", "crates/spades-server", "crates/trick-notation"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["William <limwilliam23@gmail.com>"]
repository = "https://github.com/wlim33/rust-spades"
license = "MIT"
version = "3.0.0"

[workspace.dependencies]
uuid = { version = "1.23", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
