[package]
name = "spades-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Spades game server (axum HTTP/WebSocket + matchmaking + challenges)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "spades-server"
path = "src/bin/server/main.rs"

[dependencies]
spades = { path = "../spades-core", version = "3.0.0", features = ["openapi"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["catch-panic", "cors", "limit", "request-id", "timeout", "trace"] }
tokio-stream = "0.1"
futures-util = "0.3"
async-stream = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
rustrict = "0.7"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
oasgen = { version = "0.25", features = ["axum", "uuid", "swagger-ui"] }
time = "0.3"
rand = "0.9"
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
argon2 = "0.5"
async-trait = "0.1"
oauth2 = "4.4"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
governor = { version = "0.7", default-features = false, features = ["std"] }
sha2 = "0.10"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
axum-test = { version = "18", features = ["reqwest", "ws"] }
ntest = "0.9"
wiremock = "0.6"
