[package]
name = "trick-notation"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Game-agnostic notation for trick-taking card games (model, canonical text, JSON)."
categories = ["games", "game-engines", "encoding"]
keywords = ["cards", "trick-taking", "notation", "pgn", "serialization"]

[lib]
name = "trick_notation"
path = "src/lib.rs"

[features]
default = []
# Derive `oasgen::OaSchema` on public types so downstream HTTP layers can
# generate an OpenAPI spec without re-wrapping our types.
openapi = ["dep:oasgen"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
oasgen = { version = "0.25", optional = true }
